--- a/App_practical/8_Calculator/Views/Shared/_Layout.cshtml
+++ b/App_practical/8_Calculator/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - calculator - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - Calculator - Назина Дарья Сергеевна, гр. НМТ-423901 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
