change_for_jenkins

--- a/App_practical/8_Calculator/Views/Home/Index.cshtml
+++ b/App_practical/8_Calculator/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
                         <!-- Кнопка вычисления -->
                         <div class="mb-3">
                             <button type="submit" class="btn btn-success w-100 py-2">
-                                Вычислить
+                                Вычислить (for Jenkins)
                             </button>
                         </div>
 
